force-app/main/default/objects/Transaction_Credit_And_Debits__c/Transaction_Credit_And_Debits__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>used to get Credit GL and Debit GL against any transaction type</description>
    <label>Transaction Credit &amp; Debits</label>
</CustomObject>