force-app/main/default/objects/Transaction_Credit_And_Debits__c/fields/Credit_GL__c.field-meta.xml
<CustomField>
    <fullName>Credit_GL__c</fullName>
    <label>Credit GL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>