force-app/main/default/objects/Transaction_Credit_And_Debits__c/fields/Debit_GL__c.field-meta.xml
<CustomField>
    <fullName>Debit_GL__c</fullName>
    <label>Debit GL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>