force-app/main/default/objects/Transaction_Credit_And_Debits__c/fields/GL_Variable__c.field-meta.xml
<CustomField>
    <fullName>GL_Variable__c</fullName>
    <label>GL Variable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>