force-app/main/default/objects/Transaction_Credit_And_Debits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credit_GL__c</columns>
    <columns>Debit_GL__c</columns>
    <columns>GL_Variable__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>